--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
   <body>
     <div class="select-menu">
-      <div class="select-btn" id="select-btn">
+      <button class="select-btn" id="select-btn" type="button">
         <span id="text">Dropdown Select</span>
-
         <ion-icon name="chevron-down-outline" class="icon-arrow"></ion-icon>
-      </div>
+      </button>
 
       <ul class="list">
         <li class="option" style="--i: 5">
@@ -43,7 +42,6 @@
         </li>
       </ul>
     </div>
-
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
