✨ Refactor dropdown menu: semantic HTML, accessible button, and CSS improvements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="select-menu">
       <button class="select-btn" id="select-btn" type="button">
-        <span id="text">Dropdown Select</span>
+        <span id="text">Dropdown Menu</span>
         <ion-icon name="chevron-down-outline" class="icon-arrow"></ion-icon>
       </button>
 
